[gd_scene load_steps=22 format=3 uid="uid://bvgfe6d634h4f"]

[ext_resource type="Script" path="res://levels/utils/scene_manager.gd" id="1_s22sq"]
[ext_resource type="PackedScene" uid="uid://bud7mic2py67r" path="res://levels/level_00.tscn" id="2_1bhgj"]
[ext_resource type="PackedScene" uid="uid://b3pgpp8lccbna" path="res://menus/main_menu.tscn" id="2_cfh14"]
[ext_resource type="PackedScene" uid="uid://bexdn3anmetvk" path="res://menus/pause_menu.tscn" id="4_b3vtl"]
[ext_resource type="Script" path="res://levels/utils/audio_manager.gd" id="5_t08fx"]
[ext_resource type="AudioStream" uid="uid://bjymc27e4l5gm" path="res://assets/audio/music/Track 1 Main menu track loop x 2.ogg" id="6_exrck"]
[ext_resource type="AudioStream" uid="uid://cbmay6pevwy5c" path="res://assets/audio/music/Track 2.ogg" id="7_e7e74"]
[ext_resource type="AudioStream" uid="uid://bhe5rpku702bj" path="res://assets/audio/music/Track 3.ogg" id="8_6q8qx"]
[ext_resource type="AudioStream" uid="uid://cd3f8q2umqd8i" path="res://assets/audio/music/Track 4.ogg" id="9_xyp5v"]
[ext_resource type="AudioStream" uid="uid://euonx8143ugh" path="res://assets/audio/music/Track 4 Drum 1.ogg" id="10_7sbb6"]
[ext_resource type="AudioStream" uid="uid://c65n00jqqtke8" path="res://assets/audio/music/Track 4 Drum 2.ogg" id="11_es1t3"]
[ext_resource type="AudioStream" uid="uid://ri457b6a3cnf" path="res://assets/audio/music/Leitmotiv.ogg" id="12_onbm1"]

[sub_resource type="Gradient" id="Gradient_a1alk"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.0860656, 0.92623, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pqn5p"]
gradient = SubResource("Gradient_a1alk")

[sub_resource type="Animation" id="Animation_kf010"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2300, 0)]
}

[sub_resource type="Animation" id="Animation_1kjmx"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2300, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mkgb2"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2300, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gccrd"]
_data = {
"RESET": SubResource("Animation_kf010"),
"fade_in": SubResource("Animation_1kjmx"),
"fade_out": SubResource("Animation_mkgb2")
}

[sub_resource type="Animation" id="Animation_3egq2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8.0]
}

[sub_resource type="Animation" id="Animation_60c46"]
resource_name = "fade_out"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctmis"]
_data = {
"RESET": SubResource("Animation_3egq2"),
"fade_out": SubResource("Animation_60c46")
}

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_s22sq")
metadata/_edit_lock_ = true

[node name="NextLevelDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RestartLevelDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FirstLevelDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MainMenuDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CreditsLevelDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ActiveGameScenes" type="Node2D" parent="."]
process_mode = 1

[node name="Level00" parent="ActiveGameScenes" instance=ExtResource("2_1bhgj")]

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="SceneFade" type="Control" parent="UserInterface"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/SceneFade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="UserInterface/SceneFade/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UserInterface/SceneFade/CenterContainer/Control"]
z_index = 10
position = Vector2(-2300, 0)
scale = Vector2(38, 17)
texture = SubResource("GradientTexture2D_pqn5p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/SceneFade"]
root_node = NodePath("../CenterContainer/Control/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_gccrd")
}

[node name="MainMenu" parent="UserInterface" instance=ExtResource("2_cfh14")]

[node name="PauseMenu" parent="UserInterface" instance=ExtResource("4_b3vtl")]

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("5_t08fx")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("6_exrck")
volume_db = 8.0
autoplay = true
parameters/looping = true

[node name="Level01Music" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("7_e7e74")
parameters/looping = true

[node name="Level02Music" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("8_6q8qx")
parameters/looping = true

[node name="Level03Music" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("9_xyp5v")
parameters/looping = true

[node name="Level03Drums1" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("10_7sbb6")
volume_db = -80.0
parameters/looping = true

[node name="Level03Drums2" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("11_es1t3")
volume_db = -80.0
parameters/looping = true

[node name="LeitmotivMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("12_onbm1")

[node name="MainMenuMusicAnimPlayer" type="AnimationPlayer" parent="AudioManager"]
root_node = NodePath("../MainMenuMusic")
libraries = {
"": SubResource("AnimationLibrary_ctmis")
}

[connection signal="timeout" from="NextLevelDelay" to="." method="_on_next_level_delay_timeout"]
[connection signal="timeout" from="RestartLevelDelay" to="." method="_on_restart_level_delay_timeout"]
[connection signal="timeout" from="FirstLevelDelay" to="." method="_on_first_level_delay_timeout"]
[connection signal="timeout" from="MainMenuDelay" to="." method="_on_main_menu_delay_timeout"]
[connection signal="timeout" from="CreditsLevelDelay" to="." method="_on_credits_level_delay_timeout"]
[connection signal="pressed" from="UserInterface/MainMenu/ButtonsMarginContainer/ButtonsVBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UserInterface/MainMenu/ButtonsMarginContainer/ButtonsVBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="UserInterface/PauseMenu/BittonsVBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="UserInterface/PauseMenu/BittonsVBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]

[editable path="UserInterface/MainMenu"]
[editable path="UserInterface/PauseMenu"]
